--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/ee08608c88.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <div class="quote-container" id="quote-container">
+        <!-- Quote -->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">Happiness will never come to those who fail to appreciate what they already have.</span>
+        </div>
+
+        <!-- Author -->
+        <div class="quote-author">
+            <span id="author">Buddha</span>
+        </div>
+
+        <!-- Buttons -->
+        <div class="button-container">
+            <div class="social-container">
+                <button class="btn twitter-button social-button" id="twitter" title="Tweet this!"> <i
+                        class="fa-brands fa-x-twitter"></i>
+                </button>
+                <button class="btn social-button" id="threads" title="Thread this"> <i class="fa-brands fa-threads"></i>
+                </button>
+                <button class="btn social-button" id="linkedin" title="Thread this"> <i class="fa fa-linkedin"></i>
+                </button>
+            </div>
+            <button class="btn" id="new-quote">New Quote</button>
+        </div>
+
+    </div>
 
     <!-- Script -->
     <script src="script.js"></script>
 </body>
+
 </html>
