--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Happiness will never come to those who fail to appreciate what they already have.</span>
+            <span id="quote"></span>
         </div>
 
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
 
         <!-- Buttons -->
