--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </div>
 
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
 
     <!-- Script -->
     <script src="script.js"></script>
