--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/ee08608c88.js" crossorigin="anonymous"></script>
 </head>
 
@@ -41,7 +41,7 @@
     <div class="loader" id="loader"></div>
 
     <!-- Script -->
-    <script src="script.js"></script>
+    <script src="scripts/"></script>
 </body>
 
 </html>
