--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="loader" id="loader"></div>
 
     <!-- Script -->
-    <script src="scripts/"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
